Update quote spam mail project.ipynb

--- a/quote spam mail project.ipynb
+++ b/quote spam mail project.ipynb
@@ -119,9 +119,9 @@
     "from email.mime.text import MIMEText\n",
     "from email.mime.multipart import MIMEMultipart\n",
     "\n",
-    "to = 'ihmcm2gogogo@gmail.com'\n",
-    "fromm = 'seanlyw613@gmail.com'\n",
-    "your_pass = \"lrjltmofvwhffapc\"\n",
+    "to = '@gmail.com'\n",
+    "fromm = '@gmail.com'\n",
+    "your_pass = \"16digitpassword\"\n",
     "body = \"Subject: André Gide\" + \"\\n\" + \"It is better to be hated for what you are than to be loved for what you are not\"\n",
     "subject = 'Subject goes here'\n",
     "message = MIMEMultipart()\n",
