--- a/[E700] Eulercoin.ipynb
+++ b/[E700] Eulercoin.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "https://urmaul.com/blog/solution-for-project-euler-problem-700/\n",
     "\n",
-    "https://saracogluahmet.wordpress.com/2020/02/06/eulercoin-problem-700-leonhard-euler-was-born-on-15-april-1707/"
+    "https://saracogluahmet.wordpress.com/2020/02/06/eulercoin-problem-700-leonhard-euler-was-born-on-15-april-1707/   My code takes forever to finish"
    ]
   }
  ],
