Update Simulating 2D Brownian Motion in Python.ipynb

--- a/Simulating 2D Brownian Motion in Python.ipynb
+++ b/Simulating 2D Brownian Motion in Python.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "#final version and easy to read #dt missing\n",
+    "#final version and easy to read\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "def monte_carlo_step2D(start_pt,time,division,scale):\n",
